--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  list-style: none;
+  /* list-style: none; */
 }
 
 /* root variable */
 :root {
   --color-primary: #ff5722;
+  --color-primary-light:#FF7A50;
   --color-secendary-light: #fff6f2;
   --color-secendary-dark: #ffa589;
   --color-navbar-: #f8f8f8;
@@ -103,16 +104,134 @@ h2 {
 }
 
 .badge--primary {
-  display: inline-block;
-  padding: 0.5rem 1rem;
   background-color: var(--color-primary);
-  border-radius: 32px;
-  font-size: 1.2rem;
   color: var(--color-white);
 }
 
 @media screen and (min-width: 1024px) {
   .badge {
     font-size: 1.4rem;
+  }
+}
+
+/* List */
+.list {
+  list-style: none;
+  font-size: 1.8rem;
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-left: 2rem;
+}
+
+/* .list--tick .list__item::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: url(/assets/images/icons8-tick\ \(1\).svg) no-repeat;
+  padding-right: 3rem;
+} */
+
+.list--tick .list__item {
+  background: url(/assets/images/tick.svg) no-repeat;
+  background-position: right center;
+  padding-right: 4rem;
+  margin-bottom: 2.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item {
+    font-size: 1.8em;
+    margin-bottom: 2rem;
+  }
+}
+
+/* Plan */
+
+.block-plan {
+  display: grid;
+  justify-content: center;
+  gap: 8rem 6rem;
+  grid-template-columns: repeat(auto-fit,minmax(250px,320px));
+  margin-top: 5rem;
+}
+
+.plan {
+  /* max-width: 450px; */
+  font-size: 1.8rem;
+  transition: all 0.3s ease-in;
+}
+
+.card {
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 20px 10px rgb(169, 167, 169);
+}
+
+.card__header,
+.card__body {
+  padding: 3rem 2.5rem;
+}
+
+.card__header{
+  background-color: var(--color-secendary-dark);
+  color: var(--color-white);
+}
+
+.card--secondary .card__header {
+background-color: var(--color-secendary-dark);
+}
+
+.card--primary .card__header {
+background-color: var(--color-primary-light);
+}
+
+.plan__introduction {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.plan__price {
+  font-size: 3rem;
+}
+
+.plan__billing-cycle {
+  font-size: 1.4rem;
+}
+
+.plan__description {
+  display: block;
+  margin-top: 1.5rem;
+}
+
+.plan .btn--block {
+  font-size: 1.6rem;
+  margin-top: 10rem;
+}
+
+.plan--popular {
+  transform: scale(1.1);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+/* Container */
+.container {
+  /* max-width: 1140px; */
+  margin: 0 auto;
+}
+
+
+@media screen and (min-width: 1024px) {
+  .plan .btn--block {
+    font-size: 1.8rem;
   }
 }
