--- a/css/style.css
+++ b/css/style.css
@@ -450,8 +450,195 @@ textarea {
   margin-right: 0rem;
 }
 
-@media screen and (min-width:1024) {
+@media screen and (min-width: 1024) {
   .contact-us__form {
     margin-right: 3rem;
   }
+}
+
+/* Footer */
+.main-footer {
+  background-color: #000;
+  color: #fff;
+  min-height: 250px;
+  display: flex;
+  align-items: center;
+}
+
+.main-footer .footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__item {
+  margin-bottom: 2.5rem;
+}
+
+.footer__item a {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #fff;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+
+.footer__item h6 {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.footer__item.enamad {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__enamad {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1rem 0.5rem;
+  max-width: 86px;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.footer__enamad img {
+  width: 100%;
+  height: auto;
+}
+
+.footer__rools img {
+  margin-left: 8rem;
+}
+
+.footer__rools p {
+  font-size: 1.2rem;
+  line-height: 3rem;
+}
+
+.text-rools {
+  color: #acacac;
+  width: 190px;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .main-footer .footer {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .footer__item {
+    margin-bottom: 0;
+    margin-left: 2rem;
+  }
+}
+
+/* Navbar */
+.main-header {
+  background-color: var(--color-navbar-);
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 1rem 2rem;
+}
+
+.nav__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  font-size: 1.4rem;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.5s ease-out;
+}
+
+.nav.nav__expanded .nav__list {
+  max-height: 100vh;
+  opacity: 1;
+}
+
+.nav__item > a {
+  text-decoration: none;
+  color: #444;
+  display: block;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.5rem 0;
+}
+
+.nav__item > a:hover {
+  color: var(--color-primary);
+}
+
+.nav__toggler {
+}
+
+.nav__item.cta {
+  font-size: 1.4rem;
+}
+
+.nav__item.cta > a {
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+.nav__item .btn {
+  padding: 1rem 3rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    padding: 0 2rem;
+  }
+
+  .nav__toggler {
+    display: none;
+  }
+  .nav__list {
+    flex-direction: row-reverse;
+    align-items: center;
+    width: auto;
+    opacity: 1;
+    max-height: 100%;
+  }
+  .nav__item > a {
+    margin-right: 2rem;
+    margin-bottom: 0;
+    font-size: 1.6rem;
+    border: 0;
+  }
+}
+
+/* Toggler */
+.nav__toggler {
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #000;
+  margin: 5px 0;
+  border-radius: 5px;
+  transition: all 0.2s ease-in;
+}
+
+.nav.nav__expanded .bar-one {
+  transform: rotate(-45deg) translate(-11.5px,11px);
+}
+
+.nav.nav__expanded .bar-two {
+  opacity: 0;
+  transform: translateX(-20px)
+}
+
+.nav.nav__expanded .bar-three {
+  transform: rotate(45deg);
 }
