--- a/css/style.css
+++ b/css/style.css
@@ -576,8 +576,8 @@ textarea {
   color: var(--color-primary);
 }
 
-.nav__toggler {
-}
+/* .nav__toggler {
+} */
 
 .nav__item.cta {
   font-size: 1.4rem;
@@ -631,14 +631,114 @@ textarea {
 }
 
 .nav.nav__expanded .bar-one {
-  transform: rotate(-45deg) translate(-11.5px,11px);
+  transform: rotate(-45deg) translate(-11.5px, 11px);
 }
 
 .nav.nav__expanded .bar-two {
   opacity: 0;
-  transform: translateX(-20px)
+  transform: translateX(-20px);
 }
 
 .nav.nav__expanded .bar-three {
   transform: rotate(45deg);
+}
+
+/* Hero section */
+.hero-section {
+  width: 100%;
+  height: 468px;
+}
+
+.hero-section img {
+  width: 100%;
+  height: auto;
+}
+
+.hero-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 468px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.intro-btn {
+  border-radius: 20px;
+  background-image: linear-gradient(
+    51deg,
+    rgba(23, 26, 60, 0.7) 5%,
+    rgba(23, 26, 60, 0.3) 95%
+  );
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  width: 270px;
+}
+
+.intro-btn h1 {
+  font-size: 2.5rem;
+  color: #fff;
+}
+
+.intro-btn h2 {
+  font-size: 1.6rem;
+  color: #fff;
+  margin-bottom: 3rem;
+}
+
+.intro-btn__passenger {
+  background-color: #fff;
+  border-radius: 12px;
+  margin-bottom: 2rem;
+  padding: 14px;
+  width: 240px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.intro-btn-dark {
+  background-color: rgba(23, 26, 60, 0.5);
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+.intro-btn__passenger p {
+  font-size: 1.4rem;
+  margin-left: 4rem;
+}
+
+.intro-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-wrapper {
+    justify-content: flex-start;
+  }
+  .intro-wrapper {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .intro-btn {
+    width: 550px;
+  }
+  .intro-btn h1 {
+    font-size: 5rem;
+  }
+  .intro-btn h2 {
+    font-size: 2.5rem;
+  }
+  .intro-btn__passenger p {
+    font-size: 1.6rem;
+    margin-left: 2.5rem;
+  }
 }
